<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/product_name_display"
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/product_name"/>

    <TextView
        android:id="@+id/total_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginEnd="20dp"
        android:textAlignment="textEnd"
        android:text="@string/total"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/one_btu"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:onClick="buttonclicked"
                    android:layout_height="match_parent"
                    android:text="@string/one"/>


                <Button
                    android:id="@+id/two_btu"
                    android:layout_width="0dp"
                    android:onClick="buttonclicked"
                    android:layout_weight="1.3"
                    android:layout_height="match_parent"
                    android:text="@string/two"/>


                <Button
                    android:id="@+id/three_btu"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:onClick="buttonclicked"
                    android:layout_height="match_parent"
                    android:text="@string/three"/>

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/four_btu"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:onClick="buttonclicked"
                    android:layout_height="match_parent"
                    android:text="@string/four"/>

                <Button
                    android:id="@+id/five_btu"
                    android:layout_width="0dp"
                    android:layout_weight="1.3"
                    android:onClick="buttonclicked"
                    android:layout_height="match_parent"
                    android:text="@string/five"/>

                <Button
                    android:id="@+id/six_btu"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:onClick="buttonclicked"
                    android:layout_height="match_parent"
                    android:text="@string/six"/>

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/seven_btu"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:onClick="buttonclicked"
                    android:layout_height="match_parent"
                    android:text="@string/seven"/>

                <Button
                    android:id="@+id/eight_btu"
                    android:layout_width="0dp"
                    android:layout_weight="1.3"
                    android:onClick="buttonclicked"
                    android:layout_height="match_parent"
                    android:text="@string/eight"/>

                <Button
                    android:id="@+id/nine_btu"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:onClick="buttonclicked"
                    android:layout_height="match_parent"
                    android:text="@string/nine"/>

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3.3">

                <Button
                    android:id="@+id/clear_btu"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:onClick="buttonclicked"
                    android:layout_height="match_parent"
                    android:text="@string/clear"/>

                <Button
                    android:id="@+id/zero_btu"
                    android:layout_weight="1.3"
                    android:layout_width="0dp"
                    android:onClick="buttonclicked"
                    android:layout_height="match_parent"
                    android:text="@string/zero"/>


            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/buy_btu"
            android:layout_width="wrap_content"
            android:onClick="buttonclicked"
            android:layout_height="match_parent"
            android:text="Buy"/>

    </LinearLayout>

    <TextView
        android:id="@+id/quantity_display"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:text="Quantity"
        android:gravity=""/>

    <ListView
        android:id="@+id/listItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:divider="#f00"
        android:dividerHeight="1dp"
        tools:listitem="@layout/list_veiw"
        tools:ignore="InvalidId" />
</LinearLayout>
